--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -1,37 +1,51 @@
-## Welcome to GitHub Pages
+## Atelier Numérique in Paris am Deutschen Forum für Kunstgeschichte (DFK Paris)
 
-You can use the [editor on GitHub](https://github.com/Manuel83/sample/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
+Bienvenue à Paris chère voyageuse, cher voyager! Hier findest Du den Ablaufplan, Informationen zu Daten, Ansprechpartner:innen und Beispiele für unser Atelier Numérique im Rahmen der vDHd 2021.
 
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
+Und falls Du noch keine Bordkarte hast, dann geht es hier direkt zur Ausgabe ! [https://pretix.eu/dfk-paris.org/hackathon/](https://pretix.eu/dfk-paris.org/hackathon/)
 
-### Markdown
 
-Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
+### Daten
 
-```markdown
-Syntax highlighted code block
+Wir bieten drei verschiedene Datensammlungen an, die jeweils in Forschungsprojekten des DFK Paris entstanden sind. Die drei Datensammlungen bestehen jeweils aus strukturierten Daten. Vom Inhalt, Format und der Struktur unterscheiden sie sich deutlich voneinander. 
 
-# Header 1
-## Header 2
-### Header 3
 
-- Bulleted
-- List
+#### Reiseberichte der Barockzeit
+ARCHITRAVE
 
-1. Numbered
-2. List
 
-**Bold** and _Italic_ and `Code` text
+Vom Team Ansprechpartnerin: Viktor Westrich [auf github]()
 
-[Link](url) and ![Image](src)
-```
+#### Deutsch-französische Kunstvermittlung von 1890 bis 1960
+DFKV
 
-For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
+Vom Team Ansprechpartnerin: Klara Niemann [beim DFK]()
 
-### Jekyll Themes
+#### OwnReality. Jedem seine Wirklichkeit - Kunstbeziehungen im Kalten Krieg
 
-Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/Manuel83/sample/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
+Das Projekt
 
-### Support or Contact
+Die Daten: 
 
-Having trouble with Pages? Check out our [documentation](https://help.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+Beispiel für Visualisierung
+
+Vom Team Ansprechpartner: Yohan Park [auf github]()
+
+### Weitere Ressourcen
+
+* dataBnF
+* Getty ULAN
+* Wikidata
+
+### Ablauf
+| Slot | Topic | Wer |
+| --- | --- | --- |
+| 09:00-09:15 | Ankommen | Team und teilnehmer:innen |
+| 09:15-09:30 | 3 x 5 min. | Daten | Klara, Viktor, Yohan |
+| 09:30-9:45  | 15 min. | Normdaten, Rameau und Schnittstellen | Anne,  Sebastien | 
+
+
+
+### Kontakt
+
+Fragen, Anregungen und weiteres Feedback richtest Du bitte direkt per Mail an [Anne Klammt](https://dfk-paris.org/de/person/anne-klammt-2597.html)
