Change table: delete header

--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -6,9 +6,8 @@ Und falls Du noch keine Bordkarte hast, dann geht es hier direkt zur Ausgabe !  
 
 
 ### Ablauf
-| Slot | Dauer | Thema | Wer |
 
-| 09:00-09:15 | Ankommen und Anfangen | Team und Teilnehmer:innen |
+| 09:00-09:15 | 15 min. | Ankommen und Anfangen | Team und Teilnehmer:innen |
 
 | 09:15-09:50 | 3 x 10 min. | Daten-Revue | Klara, Viktor, Yohan |
 
@@ -54,7 +53,7 @@ Forschungsdaten des deutsch-französischen Forschungsprojekts: ARCHITRAVE - Kuns
   * GeoJSON der besuchten Stätten und genannten Orte in Europa 
 
 Beispiel für Visualisierung
-* 
+* t.b.c.
 
 Während des Ateliers Ansprechpartner: Viktor Westrich [auf github](https://github.com/vwestric)
 
