--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -7,21 +7,21 @@ Und falls Du noch keine Bordkarte hast, dann geht es hier direkt zur Ausgabe !  
 
 ### Ablauf
 
-| 09:00-09:15 | Ankommen und Anfangen | 
+| 09:00-09:15  Ankommen und Anfangen | 
 
-| 09:15-09:50 | Daten-Revue |
+| 09:15-09:50  Daten-Revue |
 
-| 09:50-10:30 | Einblick: Normdaten, Schnittstellen und Ressourcen der [BnF](https://data.bnf.fr/) und des [INHA](https://agorha.inha.fr/inhaprod/jsp/direct_form_raa.jsp) | 
+| 09:50-10:30  Einblick: Normdaten, Schnittstellen und Ressourcen der [BnF](https://data.bnf.fr/) und des [INHA](https://agorha.inha.fr/inhaprod/jsp/direct_form_raa.jsp) | 
 
-| 10:30-11:00 | Ideen entwickeln, Fragen stellen |
+| 10:30-11:00  Ideen entwickeln, Fragen stellen |
 
-| 11:00-11:30 | Pitch von Ideen |
+| 11:00-11:30  Pitch von Ideen |
 
-| 13:00-16:00 | Input zu IIIF, Leaflet.js, Openrefine |
+| 13:00-16:00  Input zu IIIF, Leaflet.js, Openrefine |
 
-| 17:00-17:30 | Zwischenbilanz | 
+| 17:00-17:30  Zwischenbilanz | 
 
-| bis 23:59 | Freies Hacken, Daten anreichern usw. | 
+| bis 23:59  Freies Hacken, Daten anreichern usw. | 
 
 
 ### Das Atelier
