--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -84,7 +84,7 @@ Die Batenbank fasst die Datensätze dieser drei Teilprojektdatenbanken zusammen:
 * Deutsch-französische Kunstvermittlung 1871-1940 (Bearbeitung von einem Team in Berlin)
 * Deutsch-französische Kunstvermittlung 1945-1960 (Bearbeitung von einem Team in Paris)
 
-Aktuell (Stand Mai 2021) wird die Datenbank überarbeitet mit dem Ziel, die Nutzerfreundlichkeit zu erhöhen. Das beinhaltet erstens die Verlinkung aller in der Datenbank genannten Zeitschriftenbeiträge mit den von der Bibliothèque nationale de France (BnF) und der Universitätsbibliothek Heidelberg angebotenen Digitalisate. Zweitens wird die Referenzierung der Autor:innen und genannten Künstler:innen mit Wikidata, der GND und den Autjority Files der BnF vorgenommen.
+Aktuell (Stand Mai 2021) wird die Datenbank überarbeitet mit dem Ziel, die Nutzerfreundlichkeit zu erhöhen. Das beinhaltet erstens die Verlinkung aller in der Datenbank genannten Zeitschriftenbeiträge mit den von der Bibliothèque nationale de France (BnF) und der Universitätsbibliothek Heidelberg angebotenen Digitalisate. Zweitens wird die Referenzierung der Autor:innen und genannten Künstler:innen mit Wikidata, der GND und den Authority Files der BnF vorgenommen.
 
 * Wissenschaftliche Leitung Überarbeitung: [Dr. Anne Klammt](https://dfk-paris.org/de/person/anne-klammt-2597.html), DFK Paris
 
