add Links and minor changes of the text

--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -1,8 +1,11 @@
 ## Atelier Numérique in Paris am Deutschen Forum für Kunstgeschichte (DFK Paris)
 
-Bienvenue à Paris chère voyageuse, cher voyager! Hier findest Du den Ablaufplan, Informationen zu Daten, Ansprechpartner:innen und Beispiele für unser Atelier Numérique im Rahmen der vDHd 2021.
+Bienvenue à Paris chère voyageuse, cher voyager! 
+Hier finden Sie den Ablaufplan, Informationen zu Daten, Ansprechpartner:innen und Beispiele für unser Atelier Numérique im Rahmen der [vDHd 2021](https://vdhd2021.hypotheses.org/).
 
-Und falls Du noch keine Bordkarte hast, dann geht es hier direkt zur Ausgabe !  [https://pretix.eu/dfk-paris.org/hackathon/](https://pretix.eu/dfk-paris.org/hackathon/)
+Und falls Sie noch keine Bordkarte haben, dann geht es hier direkt zur Ausgabe !  [https://pretix.eu/dfk-paris.org/hackathon/](https://pretix.eu/dfk-paris.org/hackathon/)
+
+Twitter ? **#ateliernum**
 
 
 ### Ablauf
@@ -17,7 +20,7 @@ Und falls Du noch keine Bordkarte hast, dann geht es hier direkt zur Ausgabe !  
 
 | 11:00-11:30  Pitch von Ideen |
 
-| 13:00-16:00  Input zu IIIF, Leaflet.js, Openrefine |
+| 13:00-16:00  Input zu [IIIF](https://iiif.io/), [Leaflet.js](https://leafletjs.com/), [Openrefine](https://openrefine.org/) |
 
 | 17:00-17:30  Zwischenbilanz | 
 
@@ -30,9 +33,11 @@ Das DFK Paris lädt ein in sein Atelier Numérique, um gemeinsam mit allen Teiln
 
 Aber warum öffnen wir dieses Atelier? 
 
-Forschungsdaten sind ein neues Thema in den Geistes- und Kulturwissenschaften. Für viele Disziplinen und so auch die Kunstgeschichte entstehen erst die notwendigen Infrastrukturen, werden Standards gefunden, Vorgehensweisen erprobt und öffentliche Verzeichnisse von Daten angelegt. Noch ist es daher gar nicht einfach, passende Daten zu finden und vielfach werden Schnittstellen und Repositorien noch kaum angefragt, weil sie z.B. auf den Seiten der Anbieter wenig sichtbar abgelegt sind, keine mehrsprachigen Dokumentationen vorliegen und ähnliches. Seit einigen Jahren bemüht sich das DFK Paris seine Forschungsdaten und -software besser zugänglich zu machen. Was mit einem Github-Repositorium begann entwickelt sich nun zu einem Workflow, der die Anreicherung mit Normdaten, die Ablage und umfangreiche Auszeichnung mit Metadaten in fachwissenschaftlichen Repositorien und zukünftig ihre Visualisierung auf den Seiten des DFK Paris umfasst. Mit dem Atelier Numérique im Rahmen der gemeinsamen Reise möchten wir nun zur Nutzung unserer Daten einladen und dabei vorstellen, was es an interessanten Angeboten unserer französischen Partner gibt, mit denen man z.B. ein _Mix&Match_ der Daten machen kann.
+Forschungsdaten sind ein neues Thema in den Geistes- und Kulturwissenschaften. Für viele Disziplinen und so auch die Kunstgeschichte entstehen erst die notwendigen Infrastrukturen, werden Standards gefunden, Vorgehensweisen erprobt und öffentliche Verzeichnisse von Daten angelegt. Noch ist es daher gar nicht einfach, passende Daten zu finden und vielfach werden Schnittstellen und Repositorien noch kaum angefragt, weil sie z.B. auf den Seiten der Anbieter wenig sichtbar abgelegt sind, keine mehrsprachigen Dokumentationen vorliegen und ähnliches. 
 
-gerne möchten wir über Ergebnisse und Erfahrungen in einem Blogpost auf arthistoricum.net unn einem gemeinsamen Beitrag zur gemeinsamen "Reise" des Arbeitskreis Digital Humanities in der Max Weber Stiftung berichten.
+Seit einigen Jahren bemüht sich das DFK Paris seine Forschungsdaten und -software besser zugänglich zu machen. Was mit einem Github-Repositorium begann entwickelt sich nun zu einem Workflow, der die Anreicherung mit Normdaten, die Ablage und umfangreiche Auszeichnung mit Metadaten in fachwissenschaftlichen Repositorien und zukünftig ihre Visualisierung auf den Seiten des DFK Paris umfasst. Mit dem Atelier Numérique im Rahmen der gemeinsamen Reise möchten wir nun zur Nutzung unserer Daten einladen und dabei vorstellen, was es an interessanten Angeboten unserer französischen Partner gibt, mit denen man z.B. ein _Mix&Match_ der Daten machen kann.
+
+Gerne möchten wir über Ergebnisse und Erfahrungen des Ateliers in einem Blogpost auf arthistoricum.net und einem Beitrag zur gemeinsamen "Reise" des Arbeitskreises Digital Humanities in der Max Weber Stiftung berichten.
 
 ### Forschungsdaten im Angebot
 
@@ -60,17 +65,17 @@ Forschungsdaten des deutsch-französischen Forschungsprojekts: ARCHITRAVE - Kuns
   * TEI-XML Transkription der Berichte in Deutsch und in der französischen Übersetzung (ein Download der Volltexte wird über die Webseite angeboten [https://architrave.eu/overview.html?lang=de](https://architrave.eu/overview.html))
   * Scans der Berichte (zugänglich über die Webseite und unter den Autoren im TextGRID-Repository)
   * TEI-XML Register der genannten Werke, Stätten und Personen (über den Github-Account des DFK Paris [https://github.com/dfk-paris/paris-project/tree/master/architrave-data/data/input/register](https://github.com/dfk-paris/paris-project/tree/master/architrave-data/data/input/register))
-  * GeoJSON der besuchten Stätten in Paris, Versailles und den genannten Orte in Europa (über den Github-Account des DFK Paris[https://github.com/dfk-paris/paris-project/blob/master/parisMap.html](https://github.com/dfk-paris/paris-project/blob/master/parisMap.html))
+  * GeoJSON der besuchten Stätten in Paris, Versailles und den genannten Orte in Europa (über den Github-Account des DFK Paris [https://github.com/dfk-paris/paris-project/blob/master/parisMap.html](https://github.com/dfk-paris/paris-project/blob/master/parisMap.html))
 
 ##### Beispiel für eine Visualisierung der Orte
 
 Kartierungen 
 
 * Webseite des Projekts [https://architrave.eu/itinerary.html?lang=de#?tab-id=EuropeMap](https://architrave.eu/itinerary.html?lang=de#?tab-id=EuropeMap)
-* * Code [https://github.com/dfk-paris/paris-project](https://github.com/dfk-paris/paris-project)
+* Code [https://github.com/dfk-paris/paris-project](https://github.com/dfk-paris/paris-project)
 
 
-##### Während des Ateliers Ansprechpartner
+##### Ansprechpartner während des Ateliers
 
 Viktor Westrich [auf github](https://github.com/vwestric)
 
@@ -86,16 +91,16 @@ Die Batenbank fasst die Datensätze dieser drei Teilprojektdatenbanken zusammen:
 
 Aktuell (Stand Mai 2021) wird die Datenbank überarbeitet mit dem Ziel, die Nutzerfreundlichkeit zu erhöhen. Das beinhaltet erstens die Verlinkung aller in der Datenbank genannten Zeitschriftenbeiträge mit den von der Bibliothèque nationale de France (BnF) und der Universitätsbibliothek Heidelberg angebotenen Digitalisate. Zweitens wird die Referenzierung der Autor:innen und genannten Künstler:innen mit Wikidata, der GND und den Authority Files der BnF vorgenommen.
 
-* Wissenschaftliche Leitung Überarbeitung: [Dr. Anne Klammt](https://dfk-paris.org/de/person/anne-klammt-2597.html), DFK Paris
+* Wissenschaftliche Leitung der Überarbeitung: [Dr. Anne Klammt](https://dfk-paris.org/de/person/anne-klammt-2597.html), DFK Paris
 
 * Webseite : [https://dfk-paris.org/de/page/deutsch-franz%C3%B6sische-kunstvermittlung-1871%E2%80%931940-und-1945%E2%80%931960-2389.html](https://dfk-paris.org/de/page/deutsch-franz%C3%B6sische-kunstvermittlung-1871%E2%80%931940-und-1945%E2%80%931960-2389.html)
 * Zeitspanne : 1871-1960
 
 ##### Daten  
 
-* CSV-Dateien (Link t.b.c.)
+* CSV-Dateien (Link in Vorber.)
 
-#### Während des Ateliers Ansprechpartnerin 
+#### Ansprechpartnerin während des Ateliers
 Klara Niemann [beim DFK Paris](https://dfk-paris.org/de/person/klara-niemann-2839.html)
 
 #### Kunstbeziehungen im Kalten Krieg
@@ -107,16 +112,16 @@ Forschungsdaten des ERC-Projekts "OwnReality. Jedem seine Wirklichkeit. Der Begr
 * Webseite : [https://dfk-paris.org/de/ownreality](https://dfk-paris.org/de/ownreality)
 * Zeitspanne : 1960-1989
 * Untersuchung der Verwendung des Begriffs "Wirklichkeit" und "Realität" im Kunstdiskurs und in den Künstlerschriften  in Frankreich, der BRD, der DDR und Polen.
-* Sammlung von Quellen (Zusammenfassungen von Presseartikeln und Präsentationen von Kunstzeitschriften), einer Chronologie der Ausstellungen, Interviews mit Zeitzeugen und Fallstudien.
+* Sammlung von Quellen (Zusammenfassungen von Presseartikeln und Präsentationen von Kunstzeitschriften), eine Chronologie der Ausstellungen, Interviews mit Zeitzeugen und Fallstudien.
 
 ##### Daten 
-Die Daten sind bei heiDATA publiziert.
+Die Daten sind über heiDATA publiziert.
 
 Mathilde Arnoux, »OwnReality. To Each His Own Reality [Research Data]«, heiDATA, 2020, [https://doi.org/10.11588/DATA/ZMIHMY](https://doi.org/10.11588/DATA/ZMIHMY). 
 
 * XML-Dateien der Interviews mit Zeitzeugen
 * XML-Dateien der Fallstudien
-* JSON-Dateien mit Zusammenfassungen von Presseartikeln und Beiträgen in Kunstzeitschriften ([https://doi.org/10.11588/data/ZMIHMY/JKTBTG](https://doi.org/10.11588/data/ZMIHMY/JKTBTG), heiDATA, V2 )
+* JSON-Dateien mit Zusammenfassungen von Presseartikeln und Beiträgen in Kunstzeitschriften ([https://doi.org/10.11588/data/ZMIHMY/JKTBTG](https://doi.org/10.11588/data/ZMIHMY/JKTBTG), heiDATA, V2)
 * JSON-Dateien mit beteiligten Personen, Institutionen, Ausstellungen ([https://doi.org/10.11588/data/ZMIHMY/JKTBTG](https://doi.org/10.11588/data/ZMIHMY/JKTBTG), heiDATA, V2 )
 * JSON-Datei mit semantisch angereicherten Prsonendaten (Wikidata, BnF, GND, Getty ULAN) Link t.b.c.
 
@@ -125,7 +130,7 @@ Mathilde Arnoux, »OwnReality. To Each His Own Reality [Research Data]«, heiDAT
 Park, Yohan, 2021, Data Visualizations for the art history project “OwnReality. To Each His Own Reality“, github, [https://monsieur-park.github.io/Ownreality_visual/](ttps://monsieur-park.github.io/Ownreality_visual/)
 
 
-##### Während des Ateliers Ansprechpartner 
+##### Ansprechpartner während des Ateliers
 Yohan Park [auf github](https://github.com/Monsieur-Park)
 
 ### Weitere Ressourcen
@@ -137,7 +142,7 @@ Yohan Park [auf github](https://github.com/Monsieur-Park)
 
 ### Team
 
-Dr. Anne Klammt, Sebastien Kunert, Klara Niemann, Yohan Park, Berenike Rensinghoff, Viktor Westrich
+Dr. Anne Klammt, Sebastien Kunert, Klara Niemann, Berenike Rensinghoff (DFK Paris), Yohan Park und Viktor Westrich (Universität Mainz)
 
 
 ### Kontakt
