Add Hashtag + Tansfairdata OwnReality

--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -43,8 +43,11 @@ Gerne möchten wir über Ergebnisse und Erfahrungen des Ateliers in einem Blogpo
 
 Wir bieten drei verschiedene Datenpakete an, die jeweils in Forschungsprojekten des DFK Paris entstanden sind und strukturierte Daten beinhalten. Vom Inhalt, Format und der Struktur unterscheiden sie sich jedoch deutlich voneinander. 
 
+---
 
 #### Reiseberichte der Barockzeit
+
+**#Baroch #histor. Stätten #Balthasar Neumann #Paris #Versailles #GIS**
 
 Forschungsdaten des deutsch-französischen Forschungsprojekts: ARCHITRAVE - Kunst und Architektur in Paris und Versailles im Spiegel deutscher Reiseberichte des Barock.
 
@@ -69,7 +72,7 @@ Forschungsdaten des deutsch-französischen Forschungsprojekts: ARCHITRAVE - Kuns
 
 ##### Beispiel für eine Visualisierung der Orte
 
-Kartierungen 
+**Kartierungen** 
 
 * Webseite des Projekts [https://architrave.eu/itinerary.html?lang=de#?tab-id=EuropeMap](https://architrave.eu/itinerary.html?lang=de#?tab-id=EuropeMap)
 * Code [https://github.com/dfk-paris/paris-project](https://github.com/dfk-paris/paris-project)
@@ -79,7 +82,11 @@ Kartierungen
 
 Viktor Westrich [auf github](https://github.com/vwestric)
 
+---
+
 #### Deutsch-französische Kunstvermittlung von 1871 bis 1960
+
+**#Kunstkritik #Kunsthandwerk #Regest #kommentierte Bibliografie #IIIF**
 
 Datenbank, die im Zuge von drei Teilprojekten entstanden sind. Untersucht wurde dei Geschichte der künstlerischen Beziehungen zwischen Frankreich und Deutschland in der publizistischen Kunstkritik.
 
@@ -104,7 +111,10 @@ Aktuell (Stand Mai 2021) wird die Datenbank überarbeitet mit dem Ziel, die Nutz
 
 Klara Niemann [beim DFK Paris](https://dfk-paris.org/de/person/klara-niemann-2839.html)
 
+---
+
 #### Kunstbeziehungen im Kalten Krieg
+**#personale Netzwerke #Ausstellungen #BRD #DDR #Polen #Frankreich #Diskurs #Palladio #Neo4j**
 
 Forschungsdaten des ERC-Projekts "OwnReality. Jedem seine Wirklichkeit. Der Begriff der Wirklichkeit in der Bildenden Kunst in Frankreich, BRD, DDR und Polen zwischen 1960 und 1989", 2011-2016 mit Mitteln des ERC gefördert.
 
@@ -116,9 +126,15 @@ Forschungsdaten des ERC-Projekts "OwnReality. Jedem seine Wirklichkeit. Der Begr
 * Sammlung von Quellen (Zusammenfassungen von Presseartikeln und Präsentationen von Kunstzeitschriften), eine Chronologie der Ausstellungen, Interviews mit Zeitzeugen und Fallstudien.
 
 ##### Daten 
+
+Für das Atelier haben wir die strukturierten Daten normalisiert und einfacher nutzbar gemacht:
+
+* [Personen mit Wikidata / ULAN /GND / BnBf / ViaF : https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.xlsx](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.xlsx)
+* [strukturierte Quellenerhebung von: Ausstellungen / Beteiligte Künstler:innen / Ausstllungsorte / Gruppen und Verbände / Orte https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.xlsx](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.xlsx)
+
 Die Daten sind über heiDATA publiziert.
 
-Mathilde Arnoux, »OwnReality. To Each His Own Reality [Research Data]«, heiDATA, 2020, [https://doi.org/10.11588/DATA/ZMIHMY](https://doi.org/10.11588/DATA/ZMIHMY). 
+ZITATION ! Mathilde Arnoux, »OwnReality. To Each His Own Reality [Research Data]«, heiDATA, 2020, [https://doi.org/10.11588/DATA/ZMIHMY](https://doi.org/10.11588/DATA/ZMIHMY). 
 
 * XML-Dateien der Interviews mit Zeitzeugen
 * XML-Dateien der Fallstudien
