Add Zotero Link

--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -5,7 +5,8 @@ Hier finden Sie den Ablaufplan, Informationen zu Daten, Ansprechpartner:innen un
 
 Und falls Sie noch keine Bordkarte haben, dann geht es hier direkt zur Ausgabe !  [https://pretix.eu/dfk-paris.org/hackathon/](https://pretix.eu/dfk-paris.org/hackathon/)
 
-Twitter ? **#ateliernum**
+
+Literatur ? [Das Atelier in der Zotero-Bibliografie der vDHd2021 ](https://www.zotero.org/groups/2785027/vdhd2021/collections/D9NETN2A)
 
 
 ### Ablauf
