Add Links JSON files OwnReality

--- a/vDHd2021.md
+++ b/vDHd2021.md
@@ -130,8 +130,9 @@ Forschungsdaten des ERC-Projekts "OwnReality. Jedem seine Wirklichkeit. Der Begr
 
 Für das Atelier haben wir die strukturierten Daten normalisiert und einfacher nutzbar gemacht:
 
-* [Personen mit Wikidata / ULAN /GND / BnBf / ViaF : https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.xlsx](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.xlsx)
-* [strukturierte Quellenerhebung von: Ausstellungen / Beteiligte Künstler:innen / Ausstllungsorte / Gruppen und Verbände / Orte https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.xlsx](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.xlsx)
+* **Personen mit Wikidata / ULAN /GND / BnBf / ViaF** [als **xlsx**: https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.xlsx](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.xlsx) als [**JSON** : https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.json](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_people.json)
+
+* strukturierte Quellenerhebung von: **Ausstellungen / Beteiligte Künstler:innen / Ausstellungsorte / Gruppen und Verbände / Orte** [als **xlsx**:  https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.xlsx](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.xlsx) [als **JSON:** https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.json](https://github.com/dfk-paris/atelier_numerique/blob/gh_pages/Transfair_sources.json)
 
 Die Daten sind über heiDATA publiziert.
 
